# nickel-mustache

./: .travis.yml  Cargo.toml  LICENSE  Readme.md  index.html  rustfmt.toml  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
examples/: caching.rs  default_layout.rs  example.rs  helper_functions.rs  path_adjustment.rs  with_layout.rs
examples/assets/: default_layout.mustache  layout.mustache  my_template.mustache
hyper/header/: struct.HeadersItems.html
hyper/net/: struct.NetworkConnections.html
implementors/nickel_mustache/: trait.TemplateSupport.js
nickel/: enum.Action.html  macro.middleware!.html  macro.router!.html  macro.try_with!.html  struct.DefaultErrorHandler.html  struct.FaviconHandler.html  struct.Mount.html  struct.Nickel.html  struct.NickelError.html  struct.Query.html  struct.Request.html  struct.Response.html  struct.StaticFilesHandler.html  trait.ErrorHandler.html  trait.JsonBody.html  trait.Middleware.html  trait.Mountable.html  trait.QueryString.html  trait.Responder.html  type.MiddlewareResult.html
nickel_mustache/: index.html  sidebar-items.js  trait.Render.html  trait.TemplateCache.html  trait.TemplateSupport.html  type.CompileError.html
regex/: struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
src/: default_implementations.rs  lib.rs  response_extension.rs
tests/: test_examples.rs  testutil.rs
(+82 files in other folders)
